# easybench

./: .gitignore  .readthedocs.ja.yml  .readthedocs.yml  LICENSE  README-pypi.md  README.md  README_ja.md  mkdocs.ja.yml  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  mkdocs-test.yml  mkdocs.yml  pyodide-test.yml  pypi.yml  test.yml
benchmarks/: __init__.py  bench_dict_operations.py  bench_function_example.py  bench_list_append_insert.py  bench_list_append_insert2.py  bench_list_sort.py
docs/: advanced.md  index.md  quickstart.md  usage.md
docs/advanced/: custom-reporters.md  customize-output.md  visualization.md
docs/ja/: advanced.md  index.md  quickstart.md
docs/ja/advanced/: custom-reporters.md  customize-output.md  visualization.md
docs/ja/reference/: core.md  utils.md  visualization.md
docs/ja/usage/: class-based.md  command-line.md  decorator-based.md  notebook-magic.md
docs/reference/: cli.md  decorator.md  reporters.md
docs/usage/: class-based.md  command-line.md  decorator-based.md  notebook-magic.md
notebooks/: easybench_quickstart.ipynb
scripts/: __init__.py  blank.html  run_checks.py  test-pyodide.js
src/easybench/: __init__.py  cli.py  core.py  decorator.py  notebook.py  reporters.py  utils.py  visualization.py
tests/: __init__.py  conftest.py  test_cli.py  test_decorator.py  test_easybench_class.py  test_notebook.py  test_reporters.py  test_utils.py  test_visualization.py
