[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easybench"
dynamic = ["version"]
description = "A simple and easy-to-use Python benchmarking library"
readme = "README-pypi.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "smurak", email = "smurak000@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "typing_extensions; python_version < '3.11'",
]

[project.optional-dependencies]
all = [
    "matplotlib",
    "seaborn", 
    "pandas",
    "tqdm",
]
dev = [
    "ruff",
    "black",
    "mypy",
    "pandas-stubs",
    "types-seaborn",
    "matplotlib",
    "seaborn",
    "pandas",
    "types-tqdm",
    "tqdm",
]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
  "mkdocstrings[python]",
  "mkdocs-material",
  "black",
]

[project.urls]
"Homepage" = "https://github.com/smurak/easybench"
"Bug Tracker" = "https://github.com/smurak/easybench/issues"
"Documentation" = "https://easybench.readthedocs.io/"

[project.scripts]
easybench = "easybench.cli:cli_main"

[dependency-groups]
dev = [
  "black>=25.1.0",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.7",
  "mkdocs-material>=9.6.14",
  "mkdocstrings[python]>=0.29.1",
  "mypy>=1.15.0",
  "nbstripout>=0.8.1",
  "pandas>=2.2.3",
  "pandas-stubs>=2.2.3.250527",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.11",
  "seaborn>=0.13.2",
  "tqdm>=4.67.1",
  "types-seaborn>=0.13.2.20250516",
  "types-tqdm>=4.67.0.20250516",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "D203",     # incorrect-blank-line-before-class
  "D212",     # multi-line-summary-first-line
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",      # Allow `assert` in tests
  "SLF001"     # Private member accessed
]
"*.ipynb" = [
  "D",    # docstring
  "ANN",  # type annotation
  "E501",  # Line too long
]

[tool.black]
line-length = 88

[tool.hatch.version]
path = "src/easybench/__init__.py"
